# bundle

./: .gitignore  .gitmodules  Cargo.toml  Gemfile  Gemfile.lock.new  README.md  eval_gemfile.rb  gemfile.json  test_gemfile
.github/workflows/: benchmark.yml
.newbundle/cache/compact_index/rubygems.org.443.63ce7be7/info/: acme-client  acme-client.etag  actionpack.etag  activerecord-explain-analyze  activerecord-explain-analyze.etag  addressable.etag  akismet  akismet.etag  apollo_upload_server  apollo_upload_server.etag  app_store_connect  app_store_connect.etag  arr-pm  arr-pm.etag  asciidoctor  asciidoctor-include-ext  asciidoctor-include-ext.etag  asciidoctor-kroki  asciidoctor-kroki.etag  asciidoctor-plantuml  asciidoctor-plantuml.etag  asciidoctor.etag  async  async.etag  atlassian-jwt  atlassian-jwt.etag  awesome_print.etag  aws-sdk-cloudformation  aws-sdk-cloudformation.etag  aws-sdk-core  aws-sdk-core.etag  aws-sdk-s3  aws-sdk-s3.etag  babosa  babosa.etag  base32.etag  base64.etag  batch-loader  batch-loader.etag  bcrypt.etag  (+487 more)
docs/: rust-bundler-architecture.md  rust-bundler-diagrams.md  rust-bundler-implementation-guide.md
resources/: benchmark.json  benchmark_install.json
src/: cli.rs  compact_index_client.rs  executor.rs  gemfilelock.rs  installer.rs  main.rs  resolver.rs  version.rs
src/gemfile/: ast.rs  gemfile.pest  mod.rs  parser.rs  tests.rs
