[package]
name = "bundle"
version = "0.1.0"
edition = "2024"
authors = ["tako8ki"]
description = "A Gemfile parser for Ruby projects"

[dependencies]
pubgrub = "0.3"
semver = "1.0.0"
anyhow = "1.0.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tar = "0.4"
flate2 = "1.1.1"
astral-tokio-tar = "0.5"
tokio-stream = { version = "0.1", features = [ "io-util" ] }
futures = "0.3"
num_cpus = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
md-5 = "0.10"
sha2 = "0.10"
digest = "0.10"
thiserror = "1.0"
tempfile = "3.3"
dirs = "4.0"
url = "2.3"
regex = "1.7"
lazy_static = "1.4"
